--- a/setup.html
+++ b/setup.html
@@ -160,6 +160,7 @@ adrobisch/tresor
 <article class="md-content__inner md-typeset">
 <div class="md-content__searchable">
 <h1><a href="#setup" name="setup" class="anchor"><span class="anchor-link"></span></a>Setup</h1>
+<p>The latest version can be found here: <a href="https://search.maven.org/search?q=g:com.drobisch%20AND%20a:tresor*"><img src="https://img.shields.io/maven-central/v/com.drobisch/tresor_2.12.svg?label=Maven%20Central" alt="latest release" /></a></p>
 <p>Add the dependency to your build:</p>
 <pre class="prettyprint"><code class="language-scala">libraryDependencies += &quot;com.drobisch&quot; %% &quot;tesor&quot; % &quot;0.1.10-SNAPSHOT&quot;
 </code></pre>
