--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <span class="home-icon">⌂</span>tresor 🔒
 </a>
 <div class="version-number">
-0.4.0
+0.4.0+1-f770f58f*
 </div>
 </div>
 <div class="nav-toc">
@@ -70,7 +70,7 @@ C16.952,7,17,6.553,17,6c0-0.553-0.048-1-0.6-1H3.6C3.048,5,3,5.447,3,6C3,6.553,3.
 <span class="home-icon">⌂</span>tresor 🔒
 </a>
 <div class="version-number">
-0.4.0
+0.4.0+1-f770f58f*
 </div>
 </div>
 <div class="nav-toc">
@@ -113,7 +113,7 @@ C16.952,7,17,6.553,17,6c0-0.553-0.048-1-0.6-1H3.6C3.048,5,3,5.447,3,6C3,6.553,3.
 <p>&hellip; support all <em>Vault</em> engines or <em>API</em> calls (should be easy enough to extend)</p>
 <p>&hellip; integrate with <em>other high-level libraries</em> (this could be done in extra modules though)</p>
 <div class="source-github">
-The source code for this page can be found <a href="https://github.com/adrobisch/tresor/tree/v0.4.0/src/main/paradox/index.md">here</a>.
+The source code for this page can be found <a href="https://github.com/adrobisch/tresor/tree/master/src/main/paradox/index.md">here</a>.
 </div>
 
 <div class="nav-next">
@@ -198,7 +198,7 @@ The source code for this page can be found <a href="https://github.com/adrobisch
 <script type="text/javascript" src="lib/prettify/prettify.js"></script>
 <script type="text/javascript" src="lib/prettify/lang-scala.js"></script>
 <script type="text/javascript">jQuery(function(){window.prettyPrint && prettyPrint()});</script>
-<script type="text/javascript">jQuery(function(jq){initOldVersionWarnings(jq, '0.4.0', 'https://github.com/adrobisch/tresor')});</script>
+<script type="text/javascript">jQuery(function(jq){initOldVersionWarnings(jq, '0.4.0+1-f770f58f-SNAPSHOT', 'https://github.com/adrobisch/tresor')});</script>
 
 
 </html>
