--- a/examples.html
+++ b/examples.html
@@ -6,7 +6,7 @@
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <meta name="description" content='tresor'/>
-<link rel="canonical" href="https://github.com/adrobisch/tresorexamples.html"/>
+<link rel="canonical" href="https://github.com/commercetools/tresorexamples.html"/>
 <link href="https://fonts.googleapis.com/css?family=Roboto:100normal,100italic,300normal,300italic,400normal,400italic,500normal,500italic,700normal,700italic,900normal,900italicc" rel="stylesheet" type="text/css"/>
 <script type="text/javascript" src="lib/jquery/jquery.min.js"></script>
 <script type="text/javascript" src="js/page.js"></script>
@@ -32,7 +32,7 @@
 <span class="home-icon">⌂</span>tresor 🔒
 </a>
 <div class="version-number">
-v0.4.0
+0.8.0+0-e0e22f11+20220624-1216*
 </div>
 </div>
 <div class="nav-toc">
@@ -70,7 +70,7 @@ C16.952,7,17,6.553,17,6c0-0.553-0.048-1-0.6-1H3.6C3.048,5,3,5.447,3,6C3,6.553,3.
 <span class="home-icon">⌂</span>tresor 🔒
 </a>
 <div class="version-number">
-v0.4.0
+0.8.0+0-e0e22f11+20220624-1216*
 </div>
 </div>
 <div class="nav-toc">
@@ -104,28 +104,25 @@ v0.4.0
 <h1><a href="#examples" name="examples" class="anchor"><span class="anchor-link"></span></a>Examples</h1>
 <h2><a href="#using-the-vault-key-value-engine" name="using-the-vault-key-value-engine" class="anchor"><span class="anchor-link"></span></a>Using the Vault Key Value Engine</h2>
 <p>The KV engine in vault lets you store arbitrary secrets in a JSON-object like manner. This will create non-refreshable (as in <em>always valid</em>) leases:</p>
-<pre class="prettyprint"><button class="snippet-button copy-snippet" title="Copy snippet to clipboard">copy</button><a class="snippet-button go-to-source" href="https://github.com/adrobisch/tresor/tree/master/src/test/scala/examples/KVExample.scala#L5-L16" target="_blank" title="Go to snippet source">source</a><code class="language-scala">import cats.effect.{IO, Timer}
+<pre class="prettyprint"><button class="snippet-button copy-snippet" title="Copy snippet to clipboard">copy</button><a class="snippet-button go-to-source" href="https://github.com/commercetools/tresor/tree/master/src/test/scala/examples/KVExample.scala#L5-L16" target="_blank" title="Go to snippet source">source</a><code class="language-scala">import cats.effect.IO
 import scala.concurrent.ExecutionContext
-import com.drobisch.tresor.vault._
+import com.commercetools.tresor.vault._
 
 implicit val executionContext: ExecutionContext = ???
-implicit val timer: Timer[IO] = cats.effect.IO.timer(executionContext)
 
 val vaultConfig =
   VaultConfig(apiUrl = &quot;http://vault-host:8200/v1&quot;, token = &quot;vault-token&quot;)
 
 val kvSecret: IO[Lease] =
-  KV[cats.effect.IO](&quot;secret&quot;).secret(KeyValueContext(key = &quot;treasure&quot;), vaultConfig)</code></pre>
+  KV[cats.effect.IO](&quot;secret&quot;)
+    .secret(KeyValueContext(key = &quot;treasure&quot;), vaultConfig)</code></pre>
 <h2><a href="#using-the-aws-engine-with-auto-refresh" name="using-the-aws-engine-with-auto-refresh" class="anchor"><span class="anchor-link"></span></a>Using the AWS Engine with auto-refresh</h2>
 <p>The AWS engine create refreshable leases for which a reference can be used for storing. Usually you would create the reference in a <strong>safe</strong> way during application bootstrap, this has been omitted here: </p>
-<pre class="prettyprint"><button class="snippet-button copy-snippet" title="Copy snippet to clipboard">copy</button><a class="snippet-button go-to-source" href="https://github.com/adrobisch/tresor/tree/master/src/test/scala/examples/AWSExample.scala#L5-L23" target="_blank" title="Go to snippet source">source</a><code class="language-scala">import cats.effect.IO
-import cats.effect.concurrent.Ref
-import cats.effect.Timer
+<pre class="prettyprint"><button class="snippet-button copy-snippet" title="Copy snippet to clipboard">copy</button><a class="snippet-button go-to-source" href="https://github.com/commercetools/tresor/tree/master/src/test/scala/examples/AWSExample.scala#L7-L22" target="_blank" title="Go to snippet source">source</a><code class="language-scala">import cats.effect.IO
 
-import com.drobisch.tresor.vault._
+import com.commercetools.tresor.vault._
 
 implicit val executionContext: scala.concurrent.ExecutionContext = ???
-implicit val timer: Timer[IO] = cats.effect.IO.timer(executionContext)
 
 val vaultConfig =
   VaultConfig(apiUrl = s&quot;http://vault-host/v1&quot;, token = &quot;vault-token&quot;)
@@ -138,7 +135,7 @@ val leaseWithRefresh: IO[Lease] = AWS[IO](&quot;aws&quot;).refresh(initialLease)
   renew = awsEngine.renew
 )(vaultConfig)</code></pre>
 <div class="source-github">
-The source code for this page can be found <a href="https://github.com/adrobisch/tresor/tree/master/src/main/paradox/examples.md">here</a>.
+The source code for this page can be found <a href="https://github.com/commercetools/tresor/tree/master/src/main/paradox/examples.md">here</a>.
 </div>
 
 </div>
@@ -194,7 +191,7 @@ The source code for this page can be found <a href="https://github.com/adrobisch
 
 <!--
 <div class="copyright">
-<span class="text">&copy; 2021</span>
+<span class="text">&copy; 2022</span>
 <a href="https://www.example.com" class="logo">logo</a>
 </div>
 -->
@@ -219,7 +216,7 @@ The source code for this page can be found <a href="https://github.com/adrobisch
 <script type="text/javascript" src="lib/prettify/prettify.js"></script>
 <script type="text/javascript" src="lib/prettify/lang-scala.js"></script>
 <script type="text/javascript">jQuery(function(){window.prettyPrint && prettyPrint()});</script>
-<script type="text/javascript">jQuery(function(jq){initOldVersionWarnings(jq, 'v0.4.0', 'https://github.com/adrobisch/tresor')});</script>
+<script type="text/javascript">jQuery(function(jq){initOldVersionWarnings(jq, '0.8.0+0-e0e22f11+20220624-1216-SNAPSHOT', 'https://github.com/commercetools/tresor')});</script>
 
 
 </html>
