--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <meta name="description" content='tresor'/>
-<link rel="canonical" href="https://github.com/adrobisch/tresorindex.html"/>
+<link rel="canonical" href="https://github.com/commercetools/tresorindex.html"/>
 <link href="https://fonts.googleapis.com/css?family=Roboto:100normal,100italic,300normal,300italic,400normal,400italic,500normal,500italic,700normal,700italic,900normal,900italicc" rel="stylesheet" type="text/css"/>
 <script type="text/javascript" src="lib/jquery/jquery.min.js"></script>
 <script type="text/javascript" src="js/page.js"></script>
@@ -32,7 +32,7 @@
 <span class="home-icon">⌂</span>tresor 🔒
 </a>
 <div class="version-number">
-v0.4.0
+0.8.0+0-e0e22f11+20220624-1216*
 </div>
 </div>
 <div class="nav-toc">
@@ -70,7 +70,7 @@ C16.952,7,17,6.553,17,6c0-0.553-0.048-1-0.6-1H3.6C3.048,5,3,5.447,3,6C3,6.553,3.
 <span class="home-icon">⌂</span>tresor 🔒
 </a>
 <div class="version-number">
-v0.4.0
+0.8.0+0-e0e22f11+20220624-1216*
 </div>
 </div>
 <div class="nav-toc">
@@ -113,7 +113,7 @@ v0.4.0
 <p>&hellip; support all <em>Vault</em> engines or <em>API</em> calls (should be easy enough to extend)</p>
 <p>&hellip; integrate with <em>other high-level libraries</em> (this could be done in extra modules though)</p>
 <div class="source-github">
-The source code for this page can be found <a href="https://github.com/adrobisch/tresor/tree/master/src/main/paradox/index.md">here</a>.
+The source code for this page can be found <a href="https://github.com/commercetools/tresor/tree/master/src/main/paradox/index.md">here</a>.
 </div>
 
 <div class="nav-next">
@@ -173,7 +173,7 @@ The source code for this page can be found <a href="https://github.com/adrobisch
 
 <!--
 <div class="copyright">
-<span class="text">&copy; 2021</span>
+<span class="text">&copy; 2022</span>
 <a href="https://www.example.com" class="logo">logo</a>
 </div>
 -->
@@ -198,7 +198,7 @@ The source code for this page can be found <a href="https://github.com/adrobisch
 <script type="text/javascript" src="lib/prettify/prettify.js"></script>
 <script type="text/javascript" src="lib/prettify/lang-scala.js"></script>
 <script type="text/javascript">jQuery(function(){window.prettyPrint && prettyPrint()});</script>
-<script type="text/javascript">jQuery(function(jq){initOldVersionWarnings(jq, 'v0.4.0', 'https://github.com/adrobisch/tresor')});</script>
+<script type="text/javascript">jQuery(function(jq){initOldVersionWarnings(jq, '0.8.0+0-e0e22f11+20220624-1216-SNAPSHOT', 'https://github.com/commercetools/tresor')});</script>
 
 
 </html>
