--- a/setup.html
+++ b/setup.html
@@ -32,7 +32,7 @@
 <span class="home-icon">⌂</span>tresor 🔒
 </a>
 <div class="version-number">
-0.8.0+0-e0e22f11+20220624-1216*
+0.8.1
 </div>
 </div>
 <div class="nav-toc">
@@ -70,7 +70,7 @@ C16.952,7,17,6.553,17,6c0-0.553-0.048-1-0.6-1H3.6C3.048,5,3,5.447,3,6C3,6.553,3.
 <span class="home-icon">⌂</span>tresor 🔒
 </a>
 <div class="version-number">
-0.8.0+0-e0e22f11+20220624-1216*
+0.8.1
 </div>
 </div>
 <div class="nav-toc">
@@ -104,7 +104,7 @@ C16.952,7,17,6.553,17,6c0-0.553-0.048-1-0.6-1H3.6C3.048,5,3,5.447,3,6C3,6.553,3.
 <h1><a href="#setup" name="setup" class="anchor"><span class="anchor-link"></span></a>Setup</h1>
 <p>The latest version can be found here: <a href="https://search.maven.org/search?q=g:com.commercetools%20AND%20a:tresor*"><img src="https://img.shields.io/maven-central/v/com.commercetools/tresor_2.13.svg?label=Maven%20Central" alt="latest release" /></a></p>
 <p>Add the dependency to your build:</p>
-<pre class="prettyprint"><code class="language-scala">libraryDependencies += &quot;com.commercetools&quot; %% &quot;tresor&quot; % &quot;0.8.0+0-e0e22f11+20220624-1216-SNAPSHOT&quot;
+<pre class="prettyprint"><code class="language-scala">libraryDependencies += &quot;com.commercetools&quot; %% &quot;tresor&quot; % &quot;0.8.1&quot;
 </code></pre>
 <div class="source-github">
 The source code for this page can be found <a href="https://github.com/commercetools/tresor/tree/master/src/main/paradox/setup.md">here</a>.
@@ -177,7 +177,7 @@ The source code for this page can be found <a href="https://github.com/commercet
 <script type="text/javascript" src="lib/prettify/prettify.js"></script>
 <script type="text/javascript" src="lib/prettify/lang-scala.js"></script>
 <script type="text/javascript">jQuery(function(){window.prettyPrint && prettyPrint()});</script>
-<script type="text/javascript">jQuery(function(jq){initOldVersionWarnings(jq, '0.8.0+0-e0e22f11+20220624-1216-SNAPSHOT', 'https://github.com/commercetools/tresor')});</script>
+<script type="text/javascript">jQuery(function(jq){initOldVersionWarnings(jq, '0.8.1', 'https://github.com/commercetools/tresor')});</script>
 
 
 </html>
